fix/docs: updated /shortUrl url in swagger
